# BGT2025-2uzd

./: CMakeLists.txt  README.md
include/: AIHasher.h  FileWrite.h  constants.h  utils.h
include/crypto/: AIHasher.h  Hasher.h  block.h  blockchain.h  transaction.h
pratybos/hash_funkcija/: CMakeLists.txt  README.md  draw_konstitucija_chart.py  main.cpp
pratybos/hash_funkcija/include/: Hasher.h  IHasher.h  constants.h  draw.h  parsing_helper_funcs.h  sha256_hasher.h  test_file_generator.h
pratybos/hash_funkcija/src/cli/: draw_konstitucija_chart.cpp
pratybos/hash_funkcija/src/crypto/: Hasher.cpp
pratybos/hash_funkcija/src/file_gen/: test_file_generator.cpp
pratybos/hash_funkcija/tests/: CMakeLists.txt  benchmark.cpp  hash_test.cpp  task.cpp
src/: utils.cpp
src/crypto/: AIHasher.cpp  Hasher.cpp  sha256_hasher.cpp
src/io/: FileRead.cpp
tests/: CMakeLists.txt  hash_test.cpp
